--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/config": "^4.0.2",
     "@prisma/client": "^6.12.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "fuse.js": "^7.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
