--- a/front/angular.json
+++ b/front/angular.json
@@ -35,7 +35,7 @@
                 "output": "assets"
               }
             ],
-            "styles": ["node_modules/bootstrap/dist/css/bootstrap.min.css" ,"src/global.scss","src/theme/variables.scss","node_modules/@fortawesome/fontawesome-free/css/all.min.css","node_modules/ngx-toastr/toastr.css"],
+            "styles": ["node_modules/bootstrap/dist/css/bootstrap.min.css" ,"src/global.scss","src/theme/variables.scss","node_modules/@fortawesome/fontawesome-free/css/all.min.css","node_modules/ngx-toastr/toastr.css","node_modules/bootstrap-icons/font/bootstrap-icons.css"],
             "scripts": [],
             "browser": "src/main.ts"
           },
