--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@ionic/angular": "^8.0.0",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "ionicons": "^7.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
